// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`compiler: element transform > Fragment should not mark as single root 1`] = `
"
  const n0 = _createComponent(Comp)
  return n0
"
`;

exports[`compiler: element transform > component with fallback 1`] = `
"
  const _component_foo_bar = _resolveComponent("foo-bar")
  const n0 = _createComponentWithFallback(_component_foo_bar, null, null, true)
  return n0
"
`;

exports[`compiler: element transform > generate single root component 1`] = `
"
  const n0 = _createComponent(Comp, null, null, true)
  return n0
"
`;

exports[`compiler: element transform > number value 1`] = `
"
  const n0 = t0()
  return n0
"
`;

exports[`compiler: element transform > props merging: class 1`] = `
"
  const n0 = _createComponent(Foo, { class: () => (["foo", { bar: isBar }]) }, null, true)
  return n0
"
`;

exports[`compiler: element transform > props merging: style 1`] = `
"
  const n0 = _createComponent(Foo, { style: () => (["color: green", { color: 'red' }]) }, null, true)
  return n0
"
`;

exports[`compiler: element transform > v-for on component should not mark as single root 1`] = `
"
  const n0 = _createFor(() => (items), (_for_item0) => {
    const n2 = _createComponent(Comp)
    return n2
  }, (item) => (item), 2)
  return n0
"
`;
